- added bread adding page and modified routing - minor screen-spacing fixes and styling

--- a/WebApplication/src/app/sites/adminsites/admin-panel/admin-panel.component.css
+++ b/WebApplication/src/app/sites/adminsites/admin-panel/admin-panel.component.css
@@ -25,12 +25,25 @@ p{
   justify-content: center;
   gap: 20px;
 }
+
+
+/*dropdown menu*/
+#category{
+  height: 45px;
+  border-radius: 8px;
+  margin: 15px 0 15px 0;
+  font-size: 25px;
+  border: none;
+  padding-left: 5px;
+
+}
+
 button{
   height: 20px;
   margin-top: 15px;
   background: #afafaf;
   padding: 25px 15px;
-  font-size: 30px;
+  font-size: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,25 +64,31 @@ button:hover{
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .adminProductContainer {
   display: flex;
   align-items: center;
+
+
   height: 100px;
-  width: 47%;
+  width: 45%;
   min-height: 22vh;
   border: #DDDDDD 2px solid;
   border-radius: 8px;
   margin: 10px;
   background-color: #EEEEEE;
+  cursor: pointer;
+
 }
 
 .adminProductContainer img {
-  height: 100px;
+  height: 100%;
   width: auto;
   margin-right: 10px;
-  cursor: pointer;
+  border-radius: 2px;
 }
 
 .editPopup {
@@ -94,4 +113,14 @@ button:hover{
 
 .popupContent button {
   align-self: flex-end;
+}
+
+@media screen and (max-width: 750px){
+  .adminProductContainer{
+    width: 100%;
+  }
+  .adminButtons{
+    flex-direction: column;
+    gap: 5px;
+  }
 }
